tests/ui/codegen/no-mangle-on-internal-lang-items.stderr
error: `#[no_mangle]` cannot be used on internal language items
  --> $DIR/no-mangle-on-internal-lang-items.rs:7:1
   |
LL | #[unsafe(no_mangle)]
   | ^^^^^^^^^^^^^^^^^^^^
LL | fn internal_lang_function () {
   | ---------------------------- should be the internal language item
   |
   = note: Rustc requires this item to have a specific mangled name.

error: aborting due to 1 previous error

